--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,12 +17,12 @@ repos:
           - --notitle
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v5.0.0
     hooks:
       - id: check-merge-conflict
       - id: check-added-large-files
         args:
-          - --maxkb=250
+          - --maxkb=100
       - id: check-case-conflict
       - id: check-executables-have-shebangs
       - id: check-json
@@ -37,9 +37,11 @@ repos:
       - id: trailing-whitespace
         args:
           - --markdown-linebreak-ext=md
+      - id: no-commit-to-branch
+        args: ["--branch", "main"]
 
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.29.0
+    rev: v1.35.1
     hooks:
       - id: yamllint
         args:
@@ -47,28 +49,33 @@ repos:
           - .yamllint.yaml
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.4.2
+    rev: v1.5.5
     hooks:
       - id: remove-crlf
       - id: remove-tabs
 
   - repo: https://github.com/sirosen/texthooks
-    rev: 0.5.0
+    rev: 0.6.7
     hooks:
       - id: fix-smartquotes
       - id: fix-ligatures
       - id: forbid-bidi-controls
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.33.0
+    rev: v0.42.0
     hooks:
       - id: markdownlint-fix
         args:
           - --config
           - .markdownlint.yaml
 
+  - repo: https://github.com/k8s-at-home/sops-pre-commit
+    rev: v2.1.1
+    hooks:
+      - id: forbid-secrets
+
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.4
+    rev: v3.1.0
     hooks:
       - id: prettier
         args:
@@ -77,8 +84,8 @@ repos:
           - --config
           - .prettierrc.yaml
 
-  - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.12.0
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.21.0
     hooks:
       - id: gitleaks
 
